// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AvatarIcon> should style correctly the avatar icon 1`] = `
.c0 {
  padding-right: 8px;
}

<div
  className="c0"
/>
`;

exports[`<CheckboxWrapper> should style correctly the checkbox wrapper 1`] = `
.c0 {
  padding-right: 8px;
  width: 100%;
}

<div
  className="c0"
/>
`;

exports[`<CloseIcon> should style correctly the close icon when input is focused 1`] = `
.c0 {
  height: 24px;
  width: 24px;
  min-height: 24px;
  min-width: 24px;
  -webkit-user-select: auto;
  -moz-user-select: auto;
  -ms-user-select: auto;
  user-select: auto;
  pointer-events: auto;
  fill: #1C2025;
}

.c1:hover {
  fill: #2A3A4B;
}

<svg
  className="c0 c1"
  color={null}
  disabled={false}
  role="presentation"
  selected={false}
  size={null}
  viewBox="0 0 24 24"
>
  <g>
    <path
      d="M7.7573 8.818A.75.75 0 0 1 8.818 7.7574L12 10.9393l3.182-3.182a.75.75 0 0 1 1.0606 1.0607L13.0607 12l3.1819 3.182a.75.75 0 0 1 0 1.0606.75.75 0 0 1-1.0606 0L12 13.0607l-3.182 3.1819a.75.75 0 0 1-1.0606-1.0606L10.9392 12l-3.182-3.182Z"
    />
    <path
      clipRule="evenodd"
      d="M22.5 12c0 5.799-4.701 10.5-10.5 10.5S1.5 17.799 1.5 12 6.201 1.5 12 1.5 22.5 6.201 22.5 12ZM21 12c0 4.9706-4.0294 9-9 9s-9-4.0294-9-9 4.0294-9 9-9 9 4.0294 9 9Z"
      fillRule="evenodd"
    />
  </g>
</svg>
`;

exports[`<CloseIcon> should style correctly the close icon when input is not focused 1`] = `
.c0 {
  height: 24px;
  width: 24px;
  min-height: 24px;
  min-width: 24px;
  -webkit-user-select: auto;
  -moz-user-select: auto;
  -ms-user-select: auto;
  user-select: auto;
  pointer-events: auto;
  fill: #1C2025;
}

.c1:hover {
  fill: #5E6D7A;
}

<svg
  className="c0 c1"
  color={null}
  disabled={false}
  role="presentation"
  selected={false}
  size={null}
  viewBox="0 0 24 24"
>
  <g>
    <path
      d="M7.7573 8.818A.75.75 0 0 1 8.818 7.7574L12 10.9393l3.182-3.182a.75.75 0 0 1 1.0606 1.0607L13.0607 12l3.1819 3.182a.75.75 0 0 1 0 1.0606.75.75 0 0 1-1.0606 0L12 13.0607l-3.182 3.1819a.75.75 0 0 1-1.0606-1.0606L10.9392 12l-3.182-3.182Z"
    />
    <path
      clipRule="evenodd"
      d="M22.5 12c0 5.799-4.701 10.5-10.5 10.5S1.5 17.799 1.5 12 6.201 1.5 12 1.5 22.5 6.201 22.5 12ZM21 12c0 4.9706-4.0294 9-9 9s-9-4.0294-9-9 4.0294-9 9-9 9 4.0294 9 9Z"
      fillRule="evenodd"
    />
  </g>
</svg>
`;

exports[`<IconLeftWrapper> should style correctly the icon left wrapper 1`] = `
.c0 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-right: 8px;
  margin: 0;
}

<div
  className="c0"
/>
`;

exports[`<OptionCheckboxLayer> should style correctly the option checkbox layer when option disabled 1`] = `
.c0 {
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
}

<div
  className="c0"
/>
`;

exports[`<OptionCheckboxLayer> should style correctly the option checkbox layer when option not disabled 1`] = `
.c0 {
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

<div
  className="c0"
/>
`;

exports[`<OptionWrapper> should style correctly the option wrapper 1`] = `
.c0 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  display: block;
  max-width: 100%;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  word-wrap: normal;
}

<div
  className="c0"
/>
`;

exports[`<SelectContainer> should style correctly the select container 1`] = `
.c0 {
  font-family: 'Nunito','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 15px;
  line-height: 24px;
  margin-top: 0;
}

<div
  className="c0"
/>
`;
